0.0.6
Mounting from location box or net history now goes to the mountpoint.
If first  character of location box is $ text is treated as background command.
Mount device from location box with /dev/xxx.
Dropping text now creates a new file containing the dropped text.
Search now wraps both backwards and forwards.
Got rid of annoying gtk warnings when searching.
Added click to execute to prefs.
Code clean.
Added templates to menu, templates are in ~/Tempplates.
Password in connection box shows bullets.
Connection details now remembered after quit.
Added new connection dialog.
Fixed '//' in filepaths when '/' is current folder.
Status bar now shows file/disk details in human readable form.
Added status bar.
Search as you type now added, use down key for next item, return to select, click anywhere to rteset search term.
Added persistent right click pop menu to location box for recent locations.
Added persistent net mount history to toolbar ( use 'C' in prefs toolbar layout to enable ).
Mount davfs share from address bar with format:http://[USERNAME[:PASSWORD]@][SERVER][:PORT].
Mount sshfs share from address bar with format:ssh://SERVER[:/PATH]. for security rsa keys are used so no password etc.
Mount ftp share from address bar with format:ftp://[USERNAME[:PASSWORD]@][SERVER]. curlftpfs needs to be installed.
Mount samba share from address bar with format:smb://[USERNAME[:PASSWORD]@][SERVER][:PORT]/[SHARE].
All mounted network shares now listed.
Added smb shares to disk list.
Tabs now expanded to width of window.
Fixed KKFILEMANAGER_CURRENT_TAB env var not being set correctly with multiple tabs.
Properties dialog now visually better for single and multiple files.
Added mimetype to file props.
No longer uses magic lib to get mimetypes.
Code clean.

0.0.4
Redone mimetypes and icons, thanks to some code from the great SpacFM file manager.
Fixed folder monitoring.
Can now delete multiple files from context menu.
Can now paste multiple files from context menu.