@@ -5,6 +5,7 @@ Name=KKFileManager
 Comment=
 Terminal=false
 Type=Application
-Categories=Utility;
+Categories=System;Utility;
 Icon=KKFileManager
-Exec=kkfilemanager
+Exec=kkfilemanager %f
+MimeType=inode/directory;
