@@ -91,6 +91,8 @@
 #define MAXLOCATIONS 16
 
 #define LOADICONCNT 128
+#define LOADTHUMBCNT 16
+
 #define DRAG_TEXT_URI_LIST 1
 #define DROP_TEXT_URI_LIST 1
 #define DROP_TEXT_PLAIN    2
@@ -137,7 +139,7 @@ struct networkDriveStruct
 
 enum {NOTANETDRIVE=0,VALIDURL,INVALIDURL};
 enum {NEWVBOX=0,NEWHBOX};
-enum {TEXT_COLUMN=0,PIXBUF_COLUMN,FILEPATH,ISDIR,NUMCOLS};
+enum {FILENAME=0,PIXBUF_COLUMN,FILEPATH,ISDIR,MIMETYPE,NUMCOLS};
 enum {DEVPIXBUF=0,DEVPATH,DISKNAME,MOUNTPATH,MOUNTED,NUMDISKCOLS};
 enum {BMPIXBUF=0,BMLABEL,BMPATH,NUMBMS};
 enum {NOERR=0,NOOPENFILE,NOSAVEFILE};
