@@ -50,7 +50,7 @@ struct humanUnitsStruct
 
 enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTBMNEW,CONTEXTOPEN,CONTEXTDELETE,CONTEXTDUP,CONTEXTEXTRACT,CONTEXTCOPY,CONTEXTPROPS,CONTEXTPASTE,CONTEXTSHOW,CONTEXTHIDE,CONTEXTDISKMOUNT,CONTEXTDISKUNMOUNT,CONTEXTDISKEJECT,CONTEXTBMOPEN,CONTEXTBMDELETE,MAINFILENEW,MAINFILETERMINAL,MAINFILEPREFS,MAINFILEQUIT,MAINHELPABOUT,MAINTOOLSBLANKTOOL};
 
-enum {LOADHIDENFOLDERS=0,LOADFOLDERs,LOADHIDDENFILES,LOADFILES};
+enum {LOADHIDENFOLDERS=0,LOADFOLDERs,LOADHIDDENFILES,LOADFILES,LOADPIXMAPS};
 
 extern	menuDataStruct	menuData[];
 extern	contextStruct	**contextMenus;
