@@ -4,3 +4,6 @@ SUBDIRS = KKFileManager/app
 remake:
 	$(shell ./remakesourcelist)
 
+install-exec-hook:
+	update-mime-database /usr/share/mime
+	update-desktop-database
